updated api spec
